fixed whitespace caused by the footer on firefox

--- a/views/sass/_variables.scss
+++ b/views/sass/_variables.scss
@@ -181,8 +181,8 @@ $authentication-icon-size: 26px;
 $authentication-input-submit-padding: 5px 0;
 // }}}
 // Footer {{{
-$footer-bottom-pos: 64px;
-$footer-padding: 6px;
+$footer-bottom-pos: 63px;
+$footer-padding: 5px;
 $footer-font-size: 13px;
 $footer-align: center;
 $footer-p-margin: 5px 0; 
